services/api/currency/deployment/istio.yaml
# ---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ingress-currency
spec:
  hosts:
    - "*"
  gateways:
    - gateway-ingress-http
    - istio-egressgateway
  http:
    - match:
        - uri:
            prefix: /currency
      rewrite:
        uri: "/"
      route:
        - destination:
            host: currency-srv
---
apiVersion: v1
kind: Service
metadata:
  name: currency-srv
  labels:
    app: currency
    version: v1
spec:
  type: NodePort
  ports:
    - port: 3000
      protocol: TCP
      name: http
  selector:
    app: currency
    version: v1
